[gd_scene load_steps=26 format=3 uid="uid://b07bs023hdmf"]

[ext_resource type="Script" path="res://characters/player/player.gd" id="1_fdmgj"]
[ext_resource type="Texture2D" uid="uid://d0li2yyb4ttnx" path="res://addons/Ninja Adventure - Asset Pack/Actor/Characters/NinjaDark/SpriteSheet.png" id="2_tj06y"]
[ext_resource type="PackedScene" uid="uid://b2stx0mookcsy" path="res://effects/skills/super_light.tscn" id="2_uxtga"]
[ext_resource type="PackedScene" uid="uid://dqushsovx63w8" path="res://effects/PlayerExtinction.tscn" id="3_yslrh"]
[ext_resource type="Script" path="res://characters/player/player_controller.gd" id="4_utiwf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3pas5"]
size = Vector2(96, 77.5)

[sub_resource type="Animation" id="Animation_omr40"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_b3xxf"]
resource_name = "attack_basic_attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(3, 5), Vector2i(3, 5), Vector2i(3, 4), Vector2i(3, 4), Vector2i(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_f4j7h"]
resource_name = "attack_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 6), Vector2i(0, 3), Vector2i(0, 0), Vector2i(0, 4)]
}

[sub_resource type="Animation" id="Animation_wkciw"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2i(0, 4), Vector2i(2, 4), Vector2i(2, 5), Vector2i(3, 6)]
}

[sub_resource type="Animation" id="Animation_8n5ue"]
resource_name = "attack_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2i(1, 5), Vector2i(1, 3), Vector2i(0, 4), Vector2i(0, 5)]
}

[sub_resource type="Animation" id="Animation_p60np"]
resource_name = "idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1, 1.1, 1.2, 1.5, 1.6, 1.7, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2i(0, 2), Vector2i(0, 2), Vector2i(1, 6), Vector2i(1, 6), Vector2i(0, 2), Vector2i(1, 6), Vector2i(1, 6), Vector2i(0, 2), Vector2i(1, 6), Vector2i(1, 6), Vector2i(0, 5), Vector2i(2, 5), Vector2i(1, 5), Vector2i(0, 5), Vector2i(2, 5), Vector2i(1, 5), Vector2i(0, 6), Vector2i(0, 6), Vector2i(0, 4), Vector2i(0, 4), Vector2i(1, 6), Vector2i(1, 6), Vector2i(0, 4)]
}

[sub_resource type="Animation" id="Animation_mgvgg"]
resource_name = "jump_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 6), Vector2i(0, 3), Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_llb1v"]
resource_name = "jump_left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 5), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_bxxuy"]
resource_name = "jump_right1"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 5), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_1olvc"]
resource_name = "jump_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 6), Vector2i(1, 5), Vector2i(1, 3), Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_op1h2"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_4mbyf"]
resource_name = "walk"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_3avg6"]
resource_name = "walk_left"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_vgt0f"]
resource_name = "walk_right"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_ce2m5"]
resource_name = "walk_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_62cll"]
_data = {
"RESET": SubResource("Animation_omr40"),
"attack_basic_attack": SubResource("Animation_b3xxf"),
"attack_down": SubResource("Animation_f4j7h"),
"attack_left": SubResource("Animation_wkciw"),
"attack_up": SubResource("Animation_8n5ue"),
"idle": SubResource("Animation_p60np"),
"jump_down": SubResource("Animation_mgvgg"),
"jump_left": SubResource("Animation_llb1v"),
"jump_right": SubResource("Animation_bxxuy"),
"jump_up": SubResource("Animation_1olvc"),
"run": SubResource("Animation_op1h2"),
"walk_down": SubResource("Animation_4mbyf"),
"walk_left": SubResource("Animation_3avg6"),
"walk_right": SubResource("Animation_vgt0f"),
"walk_up": SubResource("Animation_ce2m5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8jn7x"]
size = Vector2(104.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4tt7"]
size = Vector2(107, 93)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4mupr"]
bg_color = Color(0.152941, 0.141176, 0.180392, 0.0901961)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 20

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(144, 192)
script = ExtResource("1_fdmgj")
skill_super_light_scene = ExtResource("2_uxtga")
extinction_scene = ExtResource("3_yslrh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -49)
scale = Vector2(6, 6)
texture = ExtResource("2_tj06y")
flip_h = true
hframes = 4
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -39.25)
shape = SubResource("RectangleShape2D_3pas5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_62cll")
}
autoplay = "idle"

[node name="HitBox" type="Area2D" parent="."]

[node name="Attack1Shape" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-50, -27)
shape = SubResource("RectangleShape2D_8jn7x")

[node name="VulnerableHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VulnerableHitBox"]
position = Vector2(-0.5, -46.5)
shape = SubResource("RectangleShape2D_i4tt7")
debug_color = Color(0.930737, 0.134743, 0.562206, 0.42)

[node name="HealthProgressBar" type="ProgressBar" parent="."]
modulate = Color(0.411765, 1, 0, 1)
offset_left = -42.0
offset_top = -104.0
offset_right = 39.0
offset_bottom = -93.0
theme_override_styles/background = SubResource("StyleBoxFlat_4mupr")
value = 30.0
show_percentage = false

[node name="PlayerController" type="Node" parent="."]
script = ExtResource("4_utiwf")
